--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
 
   <section id="hero">
-    <h2>Hi I Am Benedict yo</h2>
+    <h2>Hi I Am Benedict </h2>
     <p>A normal man.</p>
     <a href="#projects" class="btn">View My Work</a>
   </section>
@@ -49,4 +49,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
