--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Benedict</title>
+  <title>zapking</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Benedict</h1>
+    <h1>light</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -17,8 +17,8 @@
   </header>
 
   <section id="hero">
-    <h2>Hi I Am Benedict </h2>
-    <p>A normal man.</p>
+    <h2>light here</h2>
+    <p>haha</p>
     <a href="#projects" class="btn">View My Work</a>
   </section>
 
@@ -36,18 +36,17 @@
     </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: delzaplight@gmail.com</p>
-    <p>GitHub: github.com/Lightdelzap</p>
-  </section>
+<section id="contact">
+  <h2>Contact Me</h2>
+  <p>GitHub: <a href="https://github.com/Lightdelzap" target="_blank">github.com/Lightdelzap</a></p>
+  <p>Email: <a href="mailto:delzaplight@gmail.com">delzaplight@gmail.com</a></p>
+</section>
 
   <footer>
-    <p> 2025 </p>
+    <p>2025</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
 
