--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <section id="hero">
     <h2>light here</h2>
     <p>haha</p>
+    <img src="light.jpg" alt="lights Photo" class="profile-photo" />
     <a href="#projects" class="btn">View My Work</a>
   </section>
 
@@ -49,4 +50,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
