--- a/index.html
+++ b/index.html
@@ -7,46 +7,40 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>light</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
   <section id="hero">
     <h2>light here</h2>
     <p>haha</p>
     <img src="light.jpg" alt="lights Photo" class="profile-photo" />
-    <a href="#projects" class="btn">View My Work</a>
+    <a href="https://github.com/Lightdelzap" class="btn">View My Work</a>
   </section>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>first portfolio.</p>
+    <p>nothing.</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-      <h3>To-Do App</h3>
       <p>my projects.</p>
-      <a href="#">GitHub</a>
+      <a href="https://github.com/Lightdelzap">GitHub</a>
     </div>
   </section>
 
 <section id="contact">
   <h2>Contact Me</h2>
-  <p>GitHub: <a href="https://github.com/Lightdelzap" target="_blank">github.com/Lightdelzap</a></p>
   <p>Email: <a href="mailto:delzaplight@gmail.com">delzaplight@gmail.com</a></p>
 </section>
+
+ <button onclick="startEmojiRain()" class="btn">Rain Emojis!</button>
 
   <footer>
     <p>2025</p>
   </footer>
 
   <script src="script.js"></script>
+
+  <button id="theme-toggle" class="btn">Dark Mode</button>
+
 </body>
 </html>
