--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <p>Email: <a href="mailto:delzaplight@gmail.com">delzaplight@gmail.com</a></p>
 </section>
 
- <button onclick="startEmojiRain()" class="btn">click</button>
+ <button onclick="startEmojiRain()" class="btn">Rain Emojis!</button>
 
   <footer>
     <p>2025</p>
@@ -44,4 +44,5 @@
 
 </body>
 </html>
+
 
